<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutTablero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="3"
        app:rowCount="3"
        android:background="@drawable/tablero"
        app:layout_constraintBottom_toTopOf="@id/guidelineLimInfTablero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineLimSupTablero"
        app:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewUno"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_uno"
            android:onClick="dropIn"
            android:tag="0"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewDos"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_dos"
            android:onClick="dropIn"
            android:tag="1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewTres"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_tres"
            android:onClick="dropIn"
            android:tag="2"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewCuatro"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_cuatro"
            android:onClick="dropIn"
            android:tag="3"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewCinco"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_cinco"
            android:onClick="dropIn"
            android:tag="4"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewSeis"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_seis"
            android:onClick="dropIn"
            android:tag="5"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewSiete"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_siete"
            android:onClick="dropIn"
            android:tag="6"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="2"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewOcho"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_ocho"
            android:onClick="dropIn"
            android:tag="7"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="2"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/imgViewNueve"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/ficha_nueve"
            android:onClick="dropIn"
            android:tag="8"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            app:layout_row="2"
            app:layout_rowWeight="1"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineLimInfTablero"
        android:visibility="invisible"
        android:background="#0097A7"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:id="@+id/txtViewGanador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingBottom="12dp"
            android:text="@string/txtViewGanador_Text" />

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#AFB42B"
            android:onClick="playAgain"
            android:text="@string/btnJugar_Text" />
    </LinearLayout>


    <!-- Guías para el GridLayout del Tablero -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLimSupTablero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLimInfTablero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>